# pipc

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  pipc.ini  test-l.php  test-r.php  test-s.php  test.php
.github/workflows/: debian.yml  ubuntu.yml
include/: message.h  object.h  publisher.h  subscriber.h
include/pipc/: common.h  message.h
ini/: pipc.ini
scripts/: switch_version.sh
src/: object.cpp  pipc.cpp  publisher.cpp  subscriber.cpp
variant/: subscriber.cpp  subscriber.h
